# QuarkMQ

./: .gitignore  Cargo.toml  README.md
config/: quarkmq.toml
crates/quarkmq-broker/: Cargo.toml
crates/quarkmq-broker/src/: broker.rs  channel.rs  config.rs  consumer.rs  dispatcher.rs  error.rs  lib.rs  metadata.rs  partition.rs  topic.rs  topic_manager.rs
crates/quarkmq-client/: Cargo.toml
crates/quarkmq-client/src/: client.rs  connection.rs  error.rs  lib.rs
crates/quarkmq-cluster/: Cargo.toml
crates/quarkmq-cluster/src/: error.rs  failover.rs  gossip.rs  lib.rs  replication.rs  routing.rs
crates/quarkmq-protocol/: Cargo.toml
crates/quarkmq-protocol/src/: error.rs  frame.rs  handler.rs  lib.rs  message.rs  rpc.rs
crates/quarkmq-server/: Cargo.toml
crates/quarkmq-server/src/: config.rs  connection.rs  error.rs  lib.rs  main.rs  server.rs  session.rs
crates/quarkmq-server/src/handlers/: api_versions.rs  create_topics.rs  delete_topics.rs  fetch.rs  list_offsets.rs  metadata.rs  mod.rs  produce.rs
crates/quarkmq-storage/: Cargo.toml
crates/quarkmq-storage/src/: commit_log.rs  error.rs  gc.rs  index.rs  lib.rs  offset_index.rs  record_batch.rs  segment.rs  time_index.rs  wal.rs
docker/: Dockerfile  docker-compose.yml
sdks/go/: client.go  client_test.go  go.mod  options.go  reconnect.go  reconnect_test.go  testutil_test.go  types.go
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: basic.rs  produce_fetch.rs  topic_management.rs
