[workspace]
resolver = "2"
members = [
    "crates/quarkmq-protocol",
    "crates/quarkmq-storage",
    "crates/quarkmq-broker",
    "crates/quarkmq-server",
    "tests/integration",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crc32fast = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
parking_lot = "0.12"
kafka-protocol = "0.17"

quarkmq-protocol = { path = "crates/quarkmq-protocol" }
quarkmq-storage = { path = "crates/quarkmq-storage" }
quarkmq-broker = { path = "crates/quarkmq-broker" }
quarkmq-server = { path = "crates/quarkmq-server" }
