[package]
name = "quarkmq-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
quarkmq-storage = { workspace = true }
kafka-protocol = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
