[package]
name = "quarkmq-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
quarkmq-protocol = { workspace = true }
quarkmq-broker = { workspace = true }
quarkmq-storage = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
