[package]
name = "quarkmq-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quarkmq"
path = "src/main.rs"

[dependencies]
quarkmq-protocol = { workspace = true }
quarkmq-storage = { workspace = true }
quarkmq-broker = { workspace = true }
kafka-protocol = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
