[package]
name = "quarkmq-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
quarkmq-broker = { workspace = true }
quarkmq-server = { workspace = true }
quarkmq-protocol = { workspace = true }
kafka-protocol = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
